--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,16 +102,21 @@ jobs:
       - name: Generate and Sign Artifacts
         env:
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
-          # Prefix with 'registry:' to force Syft to pull the metadata from GHCR
-          IMAGE_URI: registry:${{ steps.build.outputs.image_uri }}
+          IMAGE_URI: ${{ steps.build.outputs.image_uri }}
+          # Pass credentials to Syft/Grype
+          GRYPE_REGISTRY_AUTH_USERNAME: ${{ github.actor }}
+          GRYPE_REGISTRY_AUTH_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+          SYFT_REGISTRY_AUTH_USERNAME: ${{ github.actor }}
+          SYFT_REGISTRY_AUTH_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "Generating SBOM (Syft)..."
-          syft "$IMAGE_URI" -o spdx-json=sbom.json
+          echo "📦 Generating SBOM (Syft)..."
+          # Use the 'registry:' prefix and pass the URI
+          syft "registry:${IMAGE_URI}" -o spdx-json=sbom.json
           
-          echo "Scanning for vulnerabilities (Grype)..."
-          grype "$IMAGE_URI" -o json > cve-report.json
+          echo "🔍 Scanning for vulnerabilities (Grype)..."
+          grype "registry:${IMAGE_URI}" -o json > cve-report.json
           
-          echo "Signing artifacts with Build-Actor sovereign key..."
+          echo "🖋️ Signing artifacts with Build-Actor sovereign key..."
           cosign sign-blob --key env://COSIGN_PRIVATE_KEY \
             --output-signature sbom.json.sig sbom.json
           
