--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,21 +102,19 @@ jobs:
       - name: Generate and Sign Artifacts
         env:
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
-          IMAGE_URI: ${{ steps.build.outputs.image_uri }}
-          # Pass credentials to Syft/Grype
-          GRYPE_REGISTRY_AUTH_USERNAME: ${{ github.actor }}
-          GRYPE_REGISTRY_AUTH_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-          SYFT_REGISTRY_AUTH_USERNAME: ${{ github.actor }}
-          SYFT_REGISTRY_AUTH_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+          # We use the IMAGE_NAME:TAG for local lookups instead of the Digest URI
+          # because local storage drivers are tag-aware.
+          LOCAL_IMAGE: "podman:ghcr.io/${{ github.repository }}/development/ubi${{ matrix.version }}-${{ matrix.variant }}:pr-${{ github.event.pull_request.number }}-${{ matrix.arch }}"
         run: |
-          echo "📦 Generating SBOM (Syft)..."
-          # Use the 'registry:' prefix and pass the URI
-          syft "registry:${IMAGE_URI}" -o spdx-json=sbom.json
+          echo "📦 Generating SBOM (Syft) from local storage..."
+          syft "${{ env.LOCAL_IMAGE }}" -o spdx-json=sbom.json
           
-          echo "🔍 Scanning for vulnerabilities (Grype)..."
-          grype "registry:${IMAGE_URI}" -o json > cve-report.json
+          echo "🔍 Scanning for vulnerabilities (Grype) from local storage..."
+          grype "${{ env.LOCAL_IMAGE }}" -o json > cve-report.json
           
           echo "🖋️ Signing artifacts with Build-Actor sovereign key..."
+          # Note: We still sign using the FULL_DIGEST to ensure the signature 
+          # is bound to the immutable content-hash pushed to GHCR.
           cosign sign-blob --key env://COSIGN_PRIVATE_KEY \
             --output-signature sbom.json.sig sbom.json
           
